--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
         <header></header>
         <style> @import url(styles/header.css); </style>
         <div class="bhead">
-            <div class="left">Добро пожаловать на информационный портал деревни Шиблино</div>
+            <div class="left">Добро пожаловать на информационный портал деревни</div>
             <div class="middle"></div>
-            <div class="right" id="shiblino">ШИБЛИНО</div>
+            <div class="right">
+                <div  class="shiblino">ШИБЛИНО</div>
+            </div>
         </div>
         <nav>
             <style>
