--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="nav-mob">
             <button class="accordion">ИНФОРМАЦИЯ</button>
             <div class="menu">
-                <a href="#" class="x-disabled">
+                <a href="#" class="disabled">
                     <div class="navmob">Историческая справка</div>
                 </a>
                     <div class="navmob">Окружение</div>
@@ -143,6 +143,126 @@
                     <div class="navmob">Мировые проблемы</div>
                     <div class="navmob">Отовсюду понемногу</div>
             </div>
+            <button class="accordion">ПРИРОДА</button>
+            <div class="menu">
+                <a href="#" class="disabled">
+                    <div class="navmob">Ближайшее соседство</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Флора растения вокруг</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Фауна местные обитатели</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Климатические особенности</div>
+                </a>
+            </div>
+            <button class="accordion">САДОВОДСТВО</button>
+            <div class="menu">
+                <a href="#" class="disabled">
+                    <div class="navmob">Кустарники ягодные</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Деревья плодовые</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Овощные грядки</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Тепличные дела</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Инсрументы</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Личный опыт</div>
+                </a>
+            </div>
+            <button class="accordion">ФОТОГАЛЕРЕЯ</button>
+            <div class="menu">
+                <a href="#" class="disabled">
+                    <div class="navmob">Пейзажи</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Времена года</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Изображения в лицах</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Деревенские будни</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Не верь глазам своим</div>
+                </a>
+            </div>
+            <button class="accordion">ЭКОЛОГИЯ</button>
+            <div class="menu">
+                <a href="#" class="disabled">
+                    <div class="navmob">Бытовые отходы</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Сжигание мусора</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Природопользование</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Охрана природы</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Убывающее плодородие</div>
+                </a>
+            </div>
+            <button class="accordion">ПОЛЕЗНЫЕ РЕСУРСЫ</button>
+            <div class="menu">
+                <a href="#" class="disabled">
+                    <div class="navmob">Медицина и лекарства</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Сельсовет Устиново</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Электросети</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Газовые сети</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Транспорт</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Почта РФ</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Администрация района</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Строительство</div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob">Обустройство</div>
+                </a>
+            </div>
+            <button class="accordion">КОНТАКТЫ</button>
+            <div class="menu">
+                <a href="#" class="disabled">
+                    <div class="navmob">
+                        По всем вопросам обращаться <br> к администратору <br>
+                        деревенского сообщества
+                    </div>
+                </a>
+                <!--a href="#" class="disabled">
+                    <div class="navmob"></div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob"></div>
+                </a>
+                <a href="#" class="disabled">
+                    <div class="navmob"></div>
+                </a-->
+            </div>    
         </div>
         
         <script src="scripts/nav_m.js"></script>
