--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles/style.css">
-        <title>Шиблино 28.06.2022</title>
-        <link rel="shortcut icon" href="icons/favicon-home8.png" type="image/x-icon">
+        <title>Шиблино 04.07.2022</title>
+        <link rel="shortcut icon" href="icons/favicon-home2.png" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css?family=Overpass|Open+Sans|Inter|Pacifico|Rubik|Nunito+Sans|
                     Neucha|Ruslan+Display" rel="stylesheet">
     </head>    
@@ -26,9 +26,6 @@
             <style>
                 @import url(styles/nav.css);
             </style>
-            <!--a href="#" class="disabled" title="Начальная страница">
-               <img src="icons/favicon-home8.png" alt="" class="home">
-            </a-->
             <a href="#" title="ТОП МЕНЮ">
                 <button class="burger-top"> ☰ </button>
             </a>
@@ -112,7 +109,8 @@
                 <div class="dropdown-content"  style="right:0.5%; text-align: center;">
                     <p style="text-align: left; font-size: 14px; padding-right: 10px">
                         &nbsp; По всем вопросам <br> &nbsp; обращаться <br> &nbsp; к администратору <br> 
-                        &nbsp; деревенского сообщества</p>
+                        &nbsp; деревенского сообщества
+                    </p>
                     <a href="#" class="disabled"></a>
                     <a href="#" class="disabled"></a>
                     <a href="#" class="disabled"></a>
@@ -263,8 +261,7 @@
                     <div class="navmob"></div>
                 </a-->
             </div>    
-        </div>
-        
+        </div>        
         <script src="scripts/nav_m.js"></script>
         
         <div class="blocks">
@@ -294,7 +291,8 @@
                     равнины. Граничит с Московской, Ярославской, Вологодской, Новгородской, Смоленской и Псковской областями.
                     В составе Российской империи и РСФСР до 1929 года существовала Тверская губерния. 29 января 1935 года 
                     была образована Калининская область, с 1990 года область называется Тверской.... 
-                    &nbsp; <em><a href="file:///C:/D_part/web/project/22%2006%2021%20shiblino/pages/content/one-a/index.html">(читать полностью...)</a></em>
+                    &nbsp; <em><a href="pages/content/one-a/index.html" style="color: rgb(243, 255, 79);">
+                    (читать полностью...)</a></em>
                 </p>
                 <p class="line-top"></p>
                 <a href="#"><h2>Тверь</h2></a>
@@ -302,7 +300,9 @@
                     <img src="images/тверь.jpg" alt="" class="fig1" title="Площадь Святого Благоверного Князя Михаила Тверского">
                     Тверь  (с 1931 по 1990 год — Калинин) — город в России, административный центр Тверской области и Калининского района, в который не входит, являясь административно-территориальной единицей со статусом округа и городом областного значения, образующим одноимённое муниципальное образование городской округ город Тверь.
                     Расположен на берегах реки Волги, в районе впадения в неё рек Тверцы и Тьмаки, в 177,6 км к северо-западу от Москвы.
-                    Тверь основана в 1135 году на стрелке реки Тьмаки. С 1247 года — центр Тверского княжества
+                    Тверь основана в 1135 году на стрелке реки Тьмаки. С 1247 года — центр Тверского княжества.....
+                    &nbsp; <em><a href="pages/content/one-a/index.html" style="color: rgb(243, 255, 79);">
+                    (читать полностью...)</a></em>
                 </p>
                 <p class="line-top"></p>
                 <h2>Кимры</h2>
